Fix oversized images
- fix oversized images on the 'how government works' page https://www.gov.uk/government/how-government-works
- remove hard coded image dimensions and add a class that sets `max-width: 100%`
- was causing the images to overlap the width of the screen at small screen sizes, causing a horizontal scroll bar and a broken layout
- only adding the class or only removing the width/height don't fix the problem, because width/height as inline attributes override CSS
- was hoping to be able to leave the width/height to reduce cumulative layout shift when loading, but this is a small loss compared to fixing the general appearance
- surprised we don't have a general class to have all `img` tags with `max-width: 100%` but since there isn't one I don't want to try introducing one here as proving it's fine on every page is a much bigger task (although logically it should be... right?)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,7 @@ $govuk-include-default-font-face: false;
     text-align: start;
   }
 }
+
+.constrained-image {
+  max-width: 100%;
+}
